unibind: add jvm backend — C-ABI shims + one generated FFM host class
The JVM is the one target with no incumbent binding library to render
through: its native story *is* a C boundary. So the backend renders both
sides itself and they cannot drift apart. Every exported function becomes
one extern "C" symbol with the uniform shape
`fn(args: *const u8, len: usize, out: *mut RawBuf)`; values cross in
unibind-jvm-runtime's length-prefixed wire format; and `unibind-gen jvm`
emits a single dependency-free `final class` (records as Java records, an
exception class per error variant, the wire codec, FFM lookup/invoke
plumbing) that any JDK 22+ compiles. Load with
`--enable-native-access=ALL-UNNAMED` plus `-Dunibind.library.<key>=<path>`
or `java.library.path`.

Scope is the sync subset: functions, records, error hierarchies, defaults,
and `jvm(name/base = ...)` renames. Objects, async, and streams reject at
render time with a pointer at what to use instead.

On the nix side `unibind.lib.build { crate; targets.jvm = { package;
javaSource }; }` pairs the generated class with the native library staged
under the exact `System.mapLibraryName` name, overlaying hand-written .java
into one compilable tree. packages/unibind/conformance-jvm is the runtime
proof, in CI as `checks.<system>.unibind-conformance-jvm-run`.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01TjK7Gph8VBHzU8bcdYBK5G